--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
+    "rxjs": "^7.8.1",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
     "vuetify": "^3.6.0-beta.0.0"
