--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
-    "rxjs": "^7.8.1",
+    "force": "^0.0.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
+    "rxjs": "^7.5.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.2",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,7 +27,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "json-server": "^1.0.0-beta.0"
+    "json-server": "^0.16.3"
   },
   "eslintConfig": {
     "root": true,
